--- a/blackjack/styles.css
+++ b/blackjack/styles.css
@@ -9,7 +9,7 @@ html {
   width: 70%;
   height: 200px;
   /* background-color: rgba(3, 209, 30, 0.6); */
-  background-color: hsla(155, 91%, 44%, 0.6);
+  /* background-color: hsla(155, 91%, 44%, 0.6); */
 }
 #dealer-hand img {
   margin: 15px;
@@ -24,7 +24,7 @@ html {
 #player-hand {
   width: 70%;
   height: 200px;
-  background-color: hsla(155, 91%, 44%, 0.6);
+  /* background-color: hsla(155, 91%, 44%, 0.6); */
 }
 #player-hand img {
   margin: 15px;
@@ -41,4 +41,32 @@ html {
   height: 25px;
   width: auto;
   border-radius: 12px;
+}
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+.alert.success {
+  background-color: #4caf50;
+}
+.alert.info {
+  background-color: #2196f3;
+}
+.alert.warning {
+  background-color: #ff9800;
+}
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
 }
