--- a/blackjack/styles.css
+++ b/blackjack/styles.css
@@ -14,6 +14,13 @@ html {
 #dealer-hand img {
   margin: 15px;
 }
+.bets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 5px;
+}
 #table {
   display: flex;
   justify-content: left;
