--- a/blackjack/styles.css
+++ b/blackjack/styles.css
@@ -156,3 +156,16 @@ html {
     -webkit-transform: translateY(0%) scaleX(1);
   }
 }
+
+@media only screen and (min-width: 600px) {
+  #player-hand img {
+    margin: 15px;
+    visibility: hidden;
+    width: 100px;
+  }
+  #dealer-hand img {
+    margin: 15px;
+    visibility: hidden;
+    width: 100px;
+  }
+}
